# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_integration.py  test_search_tools.py
backend/tests/fixtures/: sample_course.txt
frontend/: index.html  script.js  style.css
scripts/: format.cmd  format.py  format.sh  lint.py  quality.cmd  quality.sh
